<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:id="@+id/tableLayout_rect"
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:layout_margin="10dp"
        android:stretchColumns="1">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="right"
                android:text="@string/label_alpha" />

            <SeekBar
                android:id="@+id/alphaSeekBar_rect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:max="255"
                android:padding="14dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="right"
                android:text="@string/label_red" />

            <SeekBar
                android:id="@+id/redSeekBar_rect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:max="255"
                android:padding="14dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="right"
                android:text="@string/label_green" />

            <SeekBar
                android:id="@+id/greenSeekBar_rect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:max="255"
                android:padding="14dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="right"
                android:text="@string/label_blue" />

            <SeekBar
                android:id="@+id/blueSeekBar_rect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:max="255"
                android:padding="14dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="right"
                android:text="@string/width_rect" />

            <SeekBar
                android:id="@+id/widthSeekbar_rect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:max="255"
                android:padding="14dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="right"
                android:text="@string/check_filled_rect" />

            <SeekBar
                android:id="@+id/filledSeekbar_rect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:max="255"
                android:padding="14dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" />
        </TableRow>


    </TableLayout>

    <ImageView
        android:id="@+id/imageViewId_rect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/stroke_width" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:background="@android:color/white"
        android:layout_height="wrap_content">

        <View
            android:id="@+id/colorView_rect"
            android:layout_width="match_parent"
            android:layout_height="60dp"/>

    </LinearLayout>

    <Button
        android:id="@+id/setColorButton_rect"
        android:layout_gravity="center_horizontal"
        android:text="@string/choose_rectangle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>